# qgis-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/: opencode.jsonc
scripts/: opencode-mcp-launcher.bat  run_qgis_mcp_osgeo4w.bat
src/qgis_mcp/: __init__.py  qgis_env.py  server.py
src/qgis_mcp/prompts/: __init__.py
src/qgis_mcp/resources/: __init__.py
src/qgis_mcp/tools/: __init__.py  export.py  features.py  processing.py  project.py  raster.py  spatial.py
tests/: assignment_finalize.py  assignment_solution.py  conftest.py  inspect_countries.py  inspect_package_a.py  integration_test.py  scenarios.py  test_alg_lookup.py  test_evaluation.py  test_naturalearth_france.py  test_server.py
